// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染IconButton 1`] = `
<button
  className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxjAm kFuAxU sinoui-icon-button"
  color="textSecondary"
  role="button"
  type="button"
>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
      fill="currentColor"
    />
  </svg>
</button>
`;

exports[`渲染color为primary的图标按钮 1`] = `
<button
  className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxjAm kyfcje sinoui-icon-button"
  color="primary"
  role="button"
  type="button"
>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
      fill="currentColor"
    />
  </svg>
</button>
`;

exports[`渲染不可用的图标按钮 1`] = `
<button
  aria-disabled={true}
  className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button sc-AxjAm eTSTLZ sinoui-icon-button sinoui-icon-button--disabled"
  color="textSecondary"
  disabled={true}
  role="button"
  type="button"
>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
      fill="currentColor"
    />
  </svg>
</button>
`;
